--- a/Site/css/style.css
+++ b/Site/css/style.css
@@ -1,18 +1,40 @@
+/*=======================RESET======================*/
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+a{
+  text-decoration: none;
 
+}
+img{
+  width: 100%;
+  height: auto;
+}
+
+/*=======================?======================*/
 :root{
   font-size: 100%;
 }
-
+/*=======================Container======================*/
 .menu{
   height: 4.5rem;
+
   background-color: red;
 }
+nav{
+  display: flex;
+  justify-content: space-between;
 
+  
+}
+/*=======================RESET======================*/
 html, body{
 
 }
+/*=======================RESET======================*/
+/*=======================RESET======================*/
+/*=======================RESET======================*/
+/*=======================RESET======================*/
+/*=======================RESET======================*/
