--- a/Site/css/style.css
+++ b/Site/css/style.css
@@ -181,3 +181,75 @@ nav.show .menu {
   display: grid;
   place-content: center;
 }
+/*====================Logo===================*/
+.logo {
+  color: var(--title-color);
+  font: 700 1.31rem 'Poppins', sans-serif; /*21 pixel de font-size 21 /dividido por 16(valor padrao) / 21/16 = 1.31*/
+}
+.logo span {
+  color: var(--base-color);
+}
+
+.menu {
+  display: flex;
+}
+
+main {
+  margin-top: 4.5rem;
+}
+
+/*=======================HOME======================*/
+#home {
+  overflow: hidden;
+}
+#home .container {
+  margin: 0; /*Zerando a margem da imagem, para ficar colada na borda */
+}
+
+#home .imagem {
+  position: relative; /*Deixando a imagem pai em posicionamento relativo*/
+}
+
+#home .image::before {
+  /*Elemento fantasma*/
+  content: '';
+  height: 100%;
+  max-height: 280px;
+  width: 100%;
+  max-width: 400px;
+  background-color: var(--base-color-second);
+  position: absolute;
+  top: 12%;
+  left: 16.7%;
+  z-index: 0;
+  /*ANALISAR TUDO ISSO AQUI(2:06:03)*/
+}
+
+#home .image img {
+  position: relative;
+  right: 2.93rem;
+}
+
+#home .image img,
+#home .image::before {
+  border-radius: 0.25rem;
+}
+
+#home .text {
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+  text-align: center;
+}
+#home .text h1 {
+  margin-bottom: 1rem;
+}
+#home .text p {
+  margin-bottom: 2rem;
+  max-width: 100%;
+}
+
+/*===================Container===================*/
+/*=======================RESET======================*/
+/*=======================RESET======================*/
+/*=======================RESET======================*/
+
