--- a/Site/img/icons/style.css
+++ b/Site/img/icons/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src: url('fonts/icomoon.eot?kbbcnb');
-  src: url('fonts/icomoon.eot?kbbcnb#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?kbbcnb') format('truetype'),
-    url('fonts/icomoon.woff?kbbcnb') format('woff'),
-    url('fonts/icomoon.svg?kbbcnb#icomoon') format('svg');
+  src: url('fonts/icomoon.eot?pb82g0');
+  src: url('fonts/icomoon.eot?pb82g0#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?pb82g0') format('truetype'),
+    url('fonts/icomoon.woff?pb82g0') format('woff'),
+    url('fonts/icomoon.svg?pb82g0#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -26,7 +26,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-phone1:before {
+.icon-arrow-up:before {
+  content: '\e90c';
+}
+.icon-phone:before {
   content: '\e900';
 }
 .icon-close:before {
@@ -38,16 +41,16 @@
 .icon-facebook:before {
   content: '\e903';
 }
-.icon-mail:before {
+.icon-instagram:before {
   content: '\e904';
 }
-.icon-map-pin:before {
+.icon-mail:before {
   content: '\e905';
 }
-.icon-menu:before {
+.icon-map-pin:before {
   content: '\e906';
 }
-.icon-phone:before {
+.icon-menu:before {
   content: '\e907';
 }
 .icon-trim:before {
