--- a/Site/css/style.css
+++ b/Site/css/style.css
@@ -43,7 +43,7 @@ img {
 
 /*===  BASE ============================ */
 html {
-  scroll-behavior: smooth;
+  scroll-behavior: smooth !important;
 }
 
 body {
